--- a/src/client2/ClientGUI.form
+++ b/src/client2/ClientGUI.form
@@ -245,6 +245,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Delete Directory"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonRmdActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="ButtonMkd">
       <Properties>
@@ -324,6 +327,9 @@
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="DefaultCaret caret = (DefaultCaret)commandsArea.getCaret();&#xa;caret.setUpdatePolicy(DefaultCaret.ALWAYS_UPDATE);"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
